--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-10-17 21:53:14
-# Total rules: 7792
+# Generated from relevant_rules_wildcard_aware.txt on 2025-10-18 14:45:35
+# Total rules: 7886
 
 .0a0d-d3l1vr.b-cdn.net
 .0gc6y58nkk.data.adobedc.net
@@ -7,6 +7,7 @@
 .0nvdw1kkeb.data.adobedc.net
 .1.wps.cn
 .1080872514.rsc.cdn77.org
+.1097834592.rsc.cdn77.org
 .1187531871.rsc.cdn77.org
 .119.29.196.104.bc.googleusercontent.com
 .1208344341.rsc.cdn77.org
@@ -29,6 +30,7 @@
 .2016.sina.cn
 .2025.ip138.com
 .2052.flash2-http.qq.com
+.2g312kn32qfy-1323053341.cos.ap-bangkok.myqcloud.com
 .2ihjjahguz.data.adobedc.net
 .2mdn.net
 .2xbits.eu.org
@@ -61,6 +63,7 @@
 .7ng6v3lu3c.execute-api.us-east-1.amazonaws.com
 .7q1z79gxsi.global.ssl.fastly.net
 .7zgiest3zy.data.adobedc.net
+.829331534d183e7d1f6a-8d91cc88b27b979d0ea53a10ce8855ec.r96.cf5.rackcdn.com
 .857chwukib.data.adobedc.net
 .86uk.com
 .888.tv.sohu.com
@@ -78,6 +81,8 @@
 .a-dxk.play.api.3g.youku.com
 .a-reporting.nytimes.com
 .a.baidu.com
+.a.cctv.com
+.a.cntv.cn
 .a.hcaptcha.com
 .a.hl.mi.com
 .a.imput.net
@@ -628,6 +633,7 @@
 .ad.cyapi.cn
 .ad.dev.360.cn
 .ad.docer.wps.cn
+.ad.eporner.com
 .ad.gmw.cn
 .ad.gt.cdn.cloudflare.net
 .ad.imp.joins.com
@@ -670,6 +676,7 @@
 .ad4.sina.com.cn
 .ad5.sina.com.cn
 .ada.baidu.com
+.adagiobanner.s3.amazonaws.com
 .adapi.foooooot.com
 .adash-c.m.taobao.com
 .adash-c.ut.taobao.com
@@ -802,6 +809,7 @@
 .ads-zeasn-lb-680910626.eu-west-1.elb.amazonaws.com
 .ads.95516.com
 .ads.amazon.com
+.ads.auctions.yahoo.com
 .ads.bing.com
 .ads.bloomberg.com
 .ads.bssdl.kugou.com
@@ -813,6 +821,7 @@
 .ads.imgur.com
 .ads.linkedin.com
 .ads.microsoft.com
+.ads.morningstar.com
 .ads.mozilla.org
 .ads.msn.com
 .ads.music.126.net
@@ -881,6 +890,7 @@
 .adserver-load-balancer-449180619.us-east-1.elb.amazonaws.com
 .adserver-vpc-alb-1-725730730.us-west-2.elb.amazonaws.com
 .adserver.bing.com
+.adserver.softonic.com
 .adserver.yahoo.com
 .adservergatewayprod.southcentralus.cloudapp.azure.com
 .adservice.aliexpress.com
@@ -949,6 +959,7 @@
 .advertising-api-fe.amazon.com
 .advertising-api.amazon.com
 .advertising-eu.amazon.com
+.advertising.amazon.cn
 .advertising.amazon.co.jp
 .advertising.amazon.com
 .advertising.apple.com
@@ -980,6 +991,7 @@
 .aepxlg.adobe.com
 .afd.baidu.com
 .afd.l.google.com
+.affiliate.googleusercontent.com
 .affilimate.io
 .affim.baidu.com
 .afp.alicdn.com
@@ -1266,6 +1278,7 @@
 .appconf-ocs-eu.heytapdl.com.akamaized.net
 .appconf-ocs-in.heytapdl.com.akamaized.net
 .appconf-ocs-sgp.heytapdl.com.akamaized.net
+.appconf-sgp.heytapdl.com.akamaized.net
 .appdownload.alicdn.com
 .appdownload.youku.com
 .appgiftwall.oss-us-west-1.aliyuncs.com
@@ -1546,6 +1559,7 @@
 .bs.yandex.ru
 .bshg.data.adobedc.net
 .bskyb.data.adobedc.net
+.bsnj.eyeblaster.akadns.net
 .bsrv.qq.com
 .btlaunch.baidu.com
 .btloader.com
@@ -1570,20 +1584,54 @@
 .c-adash.m.taobao.com
 .c-nfa.jd.com
 .c.alimama.com
+.c.ar.msn.com
 .c.arstechnica.com
+.c.at.msn.com
 .c.baidu.com
+.c.be.msn.com
 .c.bingapis.com
+.c.br.msn.com
+.c.ca.msn.com
+.c.cl.msn.com
+.c.de.msn.com
+.c.dk.msn.com
+.c.es.msn.com
+.c.fi.msn.com
+.c.fr.msn.com
 .c.gj.qq.com
+.c.gr.msn.com
+.c.hk.msn.com
+.c.id.msn.com
+.c.ie.msn.com
+.c.il.msn.com
+.c.in.msn.com
+.c.it.msn.com
+.c.jp.msn.com
+.c.latam.msn.com
 .c.live.com
 .c.mse.360.cn
 .c.msn.com
+.c.my.msn.com
 .c.newyorker.com
+.c.nl.msn.com
+.c.no.msn.com
+.c.ph.msn.com
+.c.prodigy.msn.com
+.c.pt.msn.com
 .c.riskified.com
+.c.ru.msn.com
 .c.sayhi.360.cn
+.c.se.msn.com
+.c.sg.msn.com
 .c.sm.cn
+.c.th.msn.com
+.c.tr.msn.com
+.c.tw.msn.com
 .c.uaa.iqiyi.com
+.c.uk.msn.com
 .c.wired.com
 .c.yes.youku.com
+.c.za.msn.com
 .c0.ifengimg.com
 .c00.adobe.com
 .c0nt4ct-me.pages.dev
@@ -1767,6 +1815,7 @@
 .cms.ucweb.com
 .cmshow.gtimg.cn
 .cmsjs.eastmoney.com
+.cmweb.ilike.alibaba.com
 .cn-vmc-images.alicdn.com
 .cn.vercount.one
 .cname-asia-st-exappupgrade.vivoglobal.com
@@ -1941,6 +1990,7 @@
 .collector-pxo7xa8y7a.px-cloud.net
 .collector-pxo97ybh4j.px-cloud.net
 .collector-pxock1tfcy.px-cloud.net
+.collector-pxofjkcze6.px-cloud.net
 .collector-pxosx7m0dx.px-cloud.net
 .collector-pxouqlb4fq.px-cloud.net
 .collector-pxovq3dcnm.px-cloud.net
@@ -1980,6 +2030,7 @@
 .collector-pxugqhyjnw.px-cloud.net
 .collector-pxuh2djvgz.px-cloud.net
 .collector-pxumwut9do.px-cloud.net
+.collector-pxuueaxf9p.px-cloud.net
 .collector-pxv5xrmij5.px-cloud.net
 .collector-pxva6hkt61.px-cloud.net
 .collector-pxvb73hteg.px-cloud.net
@@ -1988,7 +2039,9 @@
 .collector-pxvnpbbfwe.px-cloud.net
 .collector-pxvtb0vdec.px-cloud.net
 .collector-pxvtidnbtc.px-cloud.net
+.collector-pxvusaqeck.px-cloud.net
 .collector-pxw2r2if6r.px-cloud.net
+.collector-pxw4hytpjs.px-cloud.net
 .collector-pxwbxurdun.px-cloud.net
 .collector-pxwn0gh9ab.px-cloud.net
 .collector-pxwrwzgcun.px-cloud.net
@@ -2153,7 +2206,6 @@
 .ctc.weather.com.cn
 .ctobsnssdk.com
 .ctr.hd.sohu.com
-.cu-cn-north00001.gala.convection.cn
 .cu-cn-north00002.gala.convection.cn
 .cub7ktzma4.data.adobedc.net
 .curiosity-seven.vercel.app
@@ -2166,6 +2218,7 @@
 .cvshealth.data.adobedc.net
 .cxense.com
 .cy2.vortex.data.microsoft.com.akadns.net
+.d.cntv.cn
 .d.dropbox.com
 .d.g.mi.com
 .d.kugou.com
@@ -3624,6 +3677,7 @@
 .de5zarwna0j2q.cloudfront.net
 .dea9webxhb7gu.cloudfront.net
 .debojuagug1sf.cloudfront.net
+.default.exp-tas.com
 .defaultts.tc.qq.com
 .defppmasu35cw.cloudfront.net
 .deguxtdhf6d01.cloudfront.net
@@ -3634,6 +3688,7 @@
 .demkc32bq01ah.cloudfront.net
 .demo.emaillpb.adobe.com
 .demoamericas275.adobe.com
+.derangedadage91wis.files.wordpress.com
 .desgao1zt7irn.cloudfront.net
 .dev-push.m.youku.com
 .dev.email-signify.cjm.adobe.com
@@ -3880,6 +3935,7 @@
 .dqd5t8xfxmhi7.cloudfront.net
 .dqif5bl25s0bf.cloudfront.net
 .dqv45r33u0ltv.cloudfront.net
+.dr.soso.com
 .dr3k6qonw2kee.cloudfront.net
 .dr6su5ow3i7eo.cloudfront.net
 .dr6vcclmzwk74.cloudfront.net
@@ -4742,6 +4798,7 @@
 .imall.cntv.cn
 .img-dsp.oss-cn-beijing.aliyuncs.com
 .img-x.jd.com
+.img.alibaba.com
 .img.en25.com
 .img.gou.wpscdn.cn
 .img.n.nasdaq.com
@@ -4795,6 +4852,7 @@
 .in.applicationinsights.azure.cn
 .in.applicationinsights.azure.com
 .in.tv.global.mi.com
+.in.yimg.com
 .incoming-data-sense360.s3.amazonaws.com
 .indexww.com
 .india.miui.com
@@ -4904,6 +4962,7 @@
 .jswebcollects.kugou.com
 .juggler.services.disqus.com
 .jun01.oss-cn-beijing.aliyuncs.com
+.jzclick.soso.com
 .jzt.jd.com
 .k.qwant.com
 .kalstats.kaltura.com
@@ -4921,6 +4980,7 @@
 .kgipadstatbak.kugou.com
 .kgmobilestat.kugou.com
 .kgmobilestatbak.kugou.com
+.kiks.yandex.ru
 .kinesis.eu-west-1.amazonaws.com
 .kingdata.ksyun.com
 .kinstruments-measurements.s3-external-1.amazonaws.com
@@ -5216,6 +5276,7 @@
 .lycamobileuklimited.data.adobedc.net
 .lynx-prod-beacon-alb-498367235.us-east-1.elb.amazonaws.com
 .m-adash.m.taobao.com
+.m.analytics.126.net.split.ntes53.netease.com
 .m.beehive.in.intl.miui.com
 .m.qpic.cn
 .m.simba.taobao.com
@@ -5327,6 +5388,7 @@
 .metrics.bose.com
 .metrics.brightcove.com
 .metrics.coindesk.com
+.metrics.cursor.sh
 .metrics.elsevier.com
 .metrics.icloud.com
 .metrics.media-amazon.com
@@ -5407,6 +5469,7 @@
 .mobileanalytics.us-east-1.amazonaws.com
 .mobileconfig.sascdn.com
 .mobilecrashreporting.googleapis.com
+.mobileleads.msn.com
 .mobilelog.kugou.com
 .mobilem.360.cn
 .mobilemsg.youku.com
@@ -5451,6 +5514,7 @@
 .mqtt.zhihu.com
 .ms.bdimg.com
 .ms.bdstatic.com
+.ms.yandex.ru
 .msadsscale.azureedge.net
 .msadsscale.microsoft.com
 .msch.f.360.cn
@@ -5599,6 +5663,7 @@
 .ntvcld-a.akamaihd.net
 .nvm6zgsnhj.data.adobedc.net
 .nxet1.360doc.cn
+.nytadvertising.nytimes.com
 .o.lenovo.com
 .o.medallia.com
 .o.phb123.com
@@ -5611,12 +5676,14 @@
 .oceanengine.com
 .odc.weather.com
 .odp.optimizely.com
+.offer.alibaba.com
 .officedepot.com.data.adobedc.net
 .officehub.nel.measure.office.net
 .offnavi.map.baidu.com
 .ogads-pa.clients6.google.com
 .ogads-pa.googleapis.com
 .ohm-dot-hackster-io.appspot.com
+.oimsgad.qq.com
 .omappapi.com
 .omgid.qq.com
 .omgmta1.qq.com
@@ -5841,8 +5908,11 @@
 .pimlog.baidu.com
 .pindao.huoban.taobao.com
 .ping.acc.sogou.com
+.ping.pdst.fm
 .pingback.giphy.com
 .pingback.sogou.com
+.pingfore.qq.com
+.pingfore.soso.com
 .pinghot.qq.com
 .pingjs.qq.com
 .pingma.qq.com
@@ -5903,6 +5973,7 @@
 .polaris5-normal-lq.zijieapi.com
 .policy.jd.com
 .policy.video.iqiyi.com
+.polling.bbc.co.uk
 .popcashjs.b-cdn.net
 .popme.163.com
 .popup.msn.com
@@ -5915,7 +5986,6 @@
 .posthog-proxy-service-prod-eu-bfb365ef029ea8b9.elb.eu-central-1.amazonaws.com
 .posthog-proxy-service-prod-us-786081f7c4028325.elb.us-east-1.amazonaws.com
 .posthog.com
-.postmediamontrealgazette2.files.wordpress.com
 .powerpoint-telemetry.officeapps.live.com
 .powr-counter.herokuapp.com
 .ppc-excel-telemetry.officeapps.live.com
@@ -5926,6 +5996,7 @@
 .pr.nss.netease.com
 .pr.prnewswire.com
 .practivate.adobe.com
+.prd-dvc-pod3-telemetry-alb-podlb-2098002532.us-east-1.elb.amazonaws.com
 .prd-usw2-requestattribution-iad.apple.com
 .prebid-collector-lb-321145981.eu-west-1.elb.amazonaws.com
 .prebid-server-production.herokuapp.com
@@ -5938,6 +6009,7 @@
 .presence.teams.live.com
 .presentationtracking.netflix.com
 .preview.msn.com
+.prexyone.appspot.com
 .privacy-center.org
 .privacy-policy.truste.com
 .privacyfriendly.netlify.app
@@ -6040,6 +6112,7 @@
 .qpb0.sohu.com
 .qpb1.sohu.com
 .qqdata.ab.qq.com
+.qqlogo.qq.com
 .qqshow2-item.qq.com
 .qreport.qunar.com
 .qring-tms.qq.com
@@ -6064,6 +6137,7 @@
 .r.sascdn.com
 .r.sg.sec.miui.com
 .r.skimresources.com
+.r.turn.com.akadns.net
 .r1.visualwebsiteoptimizer.com
 .r2.visualwebsiteoptimizer.com
 .r3.visualwebsiteoptimizer.com
@@ -6073,6 +6147,7 @@
 .rad.microsoft.com
 .rad.msn.com
 .rads.msn.com
+.rads.stackoverflow.com
 .raine.accuweather.com
 .rapid-glade-cde8.asoumare042024.workers.dev
 .ras.yahoo.com
@@ -6082,6 +6157,7 @@
 .rawtelemetry-west.servicebus.windows.net
 .rbs.data.adobedc.net
 .rcgi.video.qq.com
+.rcm-images.amazon.com
 .rcm.amazon.com
 .rd.autohome.com.cn
 .rd.e.sogou.com
@@ -6152,6 +6228,7 @@
 .rich.qq.com
 .richaudience.com
 .richmedia.video.qq.com
+.richmedia.yimg.com
 .rics.data.adobedc.net
 .risk.clearbit.com
 .river.zhidao.baidu.com
@@ -6346,6 +6423,7 @@
 .sec.resource.xiaomi.net
 .secure.diet.mayoclinic.org
 .secureflashplayerfeedback.adobe.com
+.secureir.ebaystatic.com
 .securemetrics-z.v.aaplimg.com
 .securemetrics.apple.com.cn
 .securemetrics.v.aaplimg.com
@@ -6414,6 +6492,7 @@
 .server-side-tagging-g2upphygha-uc.a.run.app
 .server-side-tagging-gaolcudvzq-uc.a.run.app
 .server-side-tagging-gcqfkmu2qq-uc.a.run.app
+.server-side-tagging-ghf6jfkeua-uc.a.run.app
 .server-side-tagging-h2qw55nphq-uc.a.run.app
 .server-side-tagging-h3opswcuzq-uc.a.run.app
 .server-side-tagging-h3sa2x4bfa-uc.a.run.app
@@ -6440,9 +6519,11 @@
 .server-side-tagging-oh37ak3tfq-uc.a.run.app
 .server-side-tagging-okdnqmrjrq-uc.a.run.app
 .server-side-tagging-orabrkodiq-uc.a.run.app
+.server-side-tagging-pd42r5yr4a-uc.a.run.app
 .server-side-tagging-prnl4gbxna-uc.a.run.app
 .server-side-tagging-pvmaaggmcq-uc.a.run.app
 .server-side-tagging-q6nk4xfvhq-uc.a.run.app
+.server-side-tagging-qcqmaxsvyq-uc.a.run.app
 .server-side-tagging-rhlbzunxta-uc.a.run.app
 .server-side-tagging-rhn2623i7q-uc.a.run.app
 .server-side-tagging-rm6bgdyvgq-uc.a.run.app
@@ -6494,6 +6575,7 @@
 .shop.wot.360.cn
 .shouji.360.cn
 .shouji.sogou.com
+.show-msgch.qq.com
 .show.look.360.cn
 .showwxml.qq.com
 .shuaji.360.cn
@@ -6590,6 +6672,7 @@
 .splitbee.io
 .spo.nel.measure.office.net
 .spocs.getpocket.com
+.spolecznosci.mgr.consensu.org
 .sponsor-logos.s3.amazonaws.com
 .spoor-api.ft.com
 .sprig.com
@@ -6735,7 +6818,7 @@
 .superrtl.data.adobedc.net
 .supersonicads-a.akamaihd.net
 .supportmetrics.apple.com
-.supportmetrics.v.aaplimg.com
+.survey.china.alibaba.com
 .surveygizmobeacon.s3.amazonaws.com
 .susapi.lenovomm.com
 .suvset.sohu.com
@@ -6825,6 +6908,7 @@
 .teams.nel.measure.office.net
 .techain.baidu.com
 .techhome-js.github.io
+.tele-analytics-917052278.us-east-1.elb.amazonaws.com
 .telecommandsvc.microsoft.com
 .telegramweb.vercel.app
 .telem-edge.smartscreen.microsoft.com
@@ -6889,6 +6973,7 @@
 .tinglog.baidu.com
 .tingyun.com
 .tiqcdn.com
+.titkoshirek.wordpress.com
 .tj.b.qq.com
 .tj.kugou.com
 .tj.video.qq.com
@@ -6940,6 +7025,7 @@
 .tongji.baidu.com
 .toolbar.baidu.com
 .toolbar.msn.com
+.toolbar.soso.com
 .tools.3g.qq.com
 .tools.prnewswire.com
 .toots-a.akamaihd.net
@@ -7078,6 +7164,7 @@
 .udcm.yahoo.com
 .udd1i5.zhihu.com
 .udpolimenew.baidu.com
+.uedata.amazon.com
 .ueisnifferengine2.azurewebsites.net
 .ufosdk.baidu.com
 .ug-sg.byteoversea.com
@@ -7141,8 +7228,10 @@
 .unionimage.baidu.com
 .unitacs.m.taobao.com
 .unitelogreport.reader.qq.com
+.unityads.unity.cn
 .unityads.unity3d.com
 .universalorlando.com.data.adobedc.net
+.unstat.baidu.com
 .up-hl.3g.qq.com
 .up1.tj.u2.ucweb.com
 .up4.ucweb.com
@@ -7226,6 +7315,7 @@
 .vd.emp.prd.s3.amazonaws.com
 .vebo-vast.pages.dev
 .vegslb.com
+.vendorlist.consensu.org
 .venezia-measurements.s3-external-1.amazonaws.com
 .vf.startpage.com
 .vhotwsh.video.qq.com
@@ -7256,6 +7346,7 @@
 .vmonitor.ws.netease.com
 .vodus-api-serverless.azurewebsites.net
 .vodus-api.azurewebsites.net
+.voduscdn.azureedge.net
 .voiceads.cn
 .volceapplog.com
 .volcsiriusbd.com
@@ -7390,6 +7481,7 @@
 .www-google-analytics.l.google.com
 .www-googletagmanager.l.google.com
 .www.addtoany.com
+.www.visualwebsiteoptimizer.com
 .www5.oss-cn-hangzhou.aliyuncs.com
 .www7.springer.com
 .wxaintpcos.wxqcloud.qq.com.cn
@@ -7432,6 +7524,7 @@
 .xz-development.oss-cn-beijing.aliyuncs.com
 .xz.fbcdn.net
 .xzliewk0jg.data.adobedc.net
+.y3.ifengimg.com
 .y66xvgo5i.chuimg.com
 .y6rqjbto8p.data.adobedc.net
 .yab-adimages.s3.amazonaws.com
@@ -7534,6 +7627,7 @@ afdconf.baidu.com
 affportal.bhphoto.com
 amdc-sibling.alipay.com.cn
 amdc.m.youku.com
+analytics.workos.com
 animal-graylog.happyelements.cn
 ap.cpatrk.net
 api-js.mixpanel.com
