--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-11-07 13:57:08
-# Total rules: 8869
+# Generated from relevant_rules_wildcard_aware.txt on 2025-11-08 14:56:14
+# Total rules: 8972
 
 .0a0d-d3l1vr.b-cdn.net
 .0gc6y58nkk.data.adobedc.net
@@ -1058,7 +1058,6 @@
 .advertising.apple.com
 .advertising.microsoft.com
 .advertising.twitter.com
-.advertising.walmart.com.cdn.cloudflare.net
 .advertising.yahoo.com
 .advertising.yandex.ru
 .advice-ads.s3.amazonaws.com
@@ -1155,6 +1154,7 @@
 .alitui.weibo.com
 .aliunion.cn.yahoo.com
 .aliyaoberbrunnergreg21.myshopify.com
+.ally.data.adobedc.net
 .alphaupsell.s3.ap-northeast-2.amazonaws.com
 .alpwiijq5x.data.adobedc.net
 .als-svc.nytimes.com
@@ -1491,6 +1491,8 @@
 .applog.ucdns.uc.cn
 .applog.zijieapi.com
 .applogios.uc.cn
+.applovin.com
+.applvn.com
 .appmetrica.yandex.ru
 .appnext-a.akamaihd.net
 .apps.coloros.com
@@ -1807,6 +1809,7 @@
 .bs.yandex.ru
 .bshg.data.adobedc.net
 .bskyb.data.adobedc.net
+.bsnj.eyeblaster.akadns.net
 .bsrv.qq.com
 .btlaunch.baidu.com
 .btloader.com
@@ -1833,20 +1836,54 @@
 .c-adash.m.taobao.com
 .c-nfa.jd.com
 .c.alimama.com
+.c.ar.msn.com
 .c.arstechnica.com
+.c.at.msn.com
 .c.baidu.com
+.c.be.msn.com
 .c.bingapis.com
+.c.br.msn.com
+.c.ca.msn.com
+.c.cl.msn.com
+.c.de.msn.com
+.c.dk.msn.com
+.c.es.msn.com
+.c.fi.msn.com
+.c.fr.msn.com
 .c.gj.qq.com
+.c.gr.msn.com
+.c.hk.msn.com
+.c.id.msn.com
+.c.ie.msn.com
+.c.il.msn.com
+.c.in.msn.com
+.c.it.msn.com
+.c.jp.msn.com
+.c.latam.msn.com
 .c.live.com
 .c.mse.360.cn
 .c.msn.com
+.c.my.msn.com
 .c.newyorker.com
+.c.nl.msn.com
+.c.no.msn.com
+.c.ph.msn.com
+.c.prodigy.msn.com
+.c.pt.msn.com
 .c.riskified.com
+.c.ru.msn.com
 .c.sayhi.360.cn
+.c.se.msn.com
+.c.sg.msn.com
 .c.sm.cn
+.c.th.msn.com
+.c.tr.msn.com
+.c.tw.msn.com
 .c.uaa.iqiyi.com
+.c.uk.msn.com
 .c.wired.com
 .c.yes.youku.com
+.c.za.msn.com
 .c0.ifengimg.com
 .c00.adobe.com
 .c0nt4ct-me.pages.dev
@@ -1923,6 +1960,7 @@
 .cdn.stat-track.com.akamaized.net
 .cdn.tanx.com
 .cdn.usefathom.com
+.cdn1sitescout.edgesuite.net
 .cdn3.optimizely.com
 .cdnprojectagora.s3.amazonaws.com
 .cdnstats-a.akamaihd.net
@@ -2065,6 +2103,7 @@
 .cmsjs.eastmoney.com
 .cmstool.youku.com
 .cmtw.pinduoduo.com
+.cmweb.ilike.alibaba.com
 .cn-vmc-images.alicdn.com
 .cn.vercount.one
 .cname-asia-st-exappupgrade.vivoglobal.com
@@ -2117,6 +2156,7 @@
 .collector-px16ud0kof.cl6.px-cloud.net
 .collector-px1azz2fhj.px-cloud.net
 .collector-px1m6q11bc.px-cloud.net
+.collector-px1p77x9q9.px-cloud.net
 .collector-px1qo90wtr.px-cloud.net
 .collector-px24c5soup.px-cloud.net
 .collector-px2bubkzbv.px-cloud.net
@@ -2127,6 +2167,7 @@
 .collector-px3d8mkyg1.px-cloud.net
 .collector-px3gqyorwc.px-cloud.net
 .collector-px3vk96i6i.px-cloud.net
+.collector-px413gkwmt.px-cloud.net
 .collector-px46scnlxs.px-cloud.net
 .collector-px4i06uv8m.px-cloud.net
 .collector-px5abl7z6x.px-cloud.net
@@ -2135,6 +2176,7 @@
 .collector-px5t3suhrz.px-cloud.net
 .collector-px611dwqp1.px-cloud.net
 .collector-px6dv4bsnz.px-cloud.net
+.collector-px6s0wc5c7.px-cloud.net
 .collector-px6xnn2xkk.px-cloud.net
 .collector-px6yz0qmxv.px-cloud.net
 .collector-px6zcfgh4h.px-cloud.net
@@ -2175,6 +2217,7 @@
 .collector-pxfofgwnle.px-cloud.net
 .collector-pxfrhhzvid.px-cloud.net
 .collector-pxftnesmxr.px-cloud.net
+.collector-pxg1aj4pso.px-cloud.net
 .collector-pxgeyljesk.px-cloud.net
 .collector-pxghenmjv3.px-cloud.net
 .collector-pxghzdhy7f.px-cloud.net
@@ -2228,6 +2271,7 @@
 .collector-pxmfiffa8l.px-cloud.net
 .collector-pxmkulqa8r.px-cloud.net
 .collector-pxmmbmd3jc.px-cloud.net
+.collector-pxn6kwgy36.px-cloud.net
 .collector-pxnazkg1pi.px-cloud.net
 .collector-pxnd6ad9ch.px-cloud.net
 .collector-pxnddshz8n.px-cloud.net
@@ -2250,11 +2294,15 @@
 .collector-pxp6l6jdfq.px-cloud.net
 .collector-pxpb7sa58f.px-cloud.net
 .collector-pxpetgchhu.px-cloud.net
+.collector-pxpo11g9ah.px-cloud.net
 .collector-pxpum5xzzw.px-cloud.net
 .collector-pxpvnjmp4g.px-cloud.net
+.collector-pxpx6fss1c.px-cloud.net
 .collector-pxqmit0szf.px-cloud.net
 .collector-pxqqxm841a.px-cloud.net
 .collector-pxrf8vapwa.px-cloud.net
+.collector-pxrmxj6fru.px-cloud.net
+.collector-pxrvwi1b26.px-cloud.net
 .collector-pxs0ivy1pq.px-cloud.net
 .collector-pxs2wzhau8.px-cloud.net
 .collector-pxs2xi6u15.px-cloud.net
@@ -2279,6 +2327,7 @@
 .collector-pxucva8b9y.px-cloud.net
 .collector-pxuem2xini.px-cloud.net
 .collector-pxugqhyjnw.px-cloud.net
+.collector-pxuh2djvgz.px-cloud.net
 .collector-pxumwut9do.px-cloud.net
 .collector-pxv5xrmij5.px-cloud.net
 .collector-pxva6hkt61.px-cloud.net
@@ -2302,6 +2351,7 @@
 .collector-pxxt4gy2ig.px-cloud.net
 .collector-pxxtfdm2w9.px-cloud.net
 .collector-pxxyzdn30m.px-cloud.net
+.collector-pxy3cosaiv.px-cloud.net
 .collector-pxyach2hjb.px-cloud.net
 .collector-pxyjwbujsx.px-cloud.net
 .collector-pxyo6yjwlb.px-cloud.net
@@ -2367,6 +2417,7 @@
 .content-analyticsadmin.googleapis.com
 .content-analyticsdata.googleapis.com
 .content-understand-strategy.sm.cn
+.content.yieldmanager.edgesuite.net
 .contentpass.net
 .contentrecommend-out.mobile.sina.cn
 .context.bestbuy.com
@@ -2445,6 +2496,7 @@
 .crashsight.qq.com
 .crazyegg.com.cdn.cloudflare.net
 .crazygames-prod-nlb-analytics-9f975bbd428d2caa.elb.us-west-2.amazonaws.com
+.crazygames-prod-nlb-analytics-v2-e91f9fb565976fa3.elb.us-west-2.amazonaws.com
 .cre-dp.sina.cn
 .cre.dp.sina.cn
 .cre.mix.sina.com.cn
@@ -2486,6 +2538,7 @@
 .cvshealth.data.adobedc.net
 .cxense.com
 .cy2.vortex.data.microsoft.com.akadns.net
+.d.cntv.cn
 .d.dropbox.com
 .d.email.forbes.com
 .d.g.mi.com
@@ -3364,6 +3417,7 @@
 .d2zjd612oq0w0l.cloudfront.net
 .d2zk8mk8hghu3d.cloudfront.net
 .d2zrhnhjlfcuhf.cloudfront.net
+.d2zs9z3hmfhcr6.cloudfront.net
 .d2zur9cc2gf1tx.cloudfront.net
 .d2zv5rkii46miq.cloudfront.net
 .d2zzazjvlpgmgi.cloudfront.net
@@ -4000,6 +4054,7 @@
 .demkc32bq01ah.cloudfront.net
 .demo.emaillpb.adobe.com
 .demoamericas275.adobe.com
+.derangedadage91wis.files.wordpress.com
 .desgao1zt7irn.cloudfront.net
 .dev-push.m.youku.com
 .dev.email-signify.cjm.adobe.com
@@ -4267,6 +4322,7 @@
 .dqd5t8xfxmhi7.cloudfront.net
 .dqif5bl25s0bf.cloudfront.net
 .dqv45r33u0ltv.cloudfront.net
+.dr.soso.com
 .dr3k6qonw2kee.cloudfront.net
 .dr6su5ow3i7eo.cloudfront.net
 .dr6vcclmzwk74.cloudfront.net
@@ -4739,6 +4795,7 @@
 .fpt.microsoft.com
 .fra-01.braze.eu
 .fra-02.braze.eu
+.frankfurterallgemeinezeitunggmbh.data.adobedc.net
 .free-cdn.oss-cn-shanghai.aliyuncs.com
 .free-store.is.autonavi.com
 .freebitcoin.pages.dev
@@ -4774,6 +4831,7 @@
 .g.msn.com
 .g.sst.godaddy.com
 .g.tbcdn.cn
+.g01.a.alicdn.com
 .g1.163.com
 .g1.corp.163.com
 .g1.dfcfw.com
@@ -5293,6 +5351,7 @@
 .img-c.heytapimage.com
 .img-dsp.oss-cn-beijing.aliyuncs.com
 .img-x.jd.com
+.img.alibaba.com
 .img.en25.com
 .img.gou.wpscdn.cn
 .img.n.nasdaq.com
@@ -5325,6 +5384,7 @@
 .in-apport-stsdk.vivoglobal.com
 .in-apppnrt-stsdk.vivoglobal.com
 .in-appprt-stsdk.vivoglobal.com
+.in-cfg-stsdk.vivoglobal.com
 .in-cota.vivoglobal.com
 .in-ctdbonrt-stsdk.vivoglobal.com
 .in-ctdbort-stsdk.vivoglobal.com
@@ -5352,6 +5412,7 @@
 .in.applicationinsights.azure.cn
 .in.applicationinsights.azure.com
 .in.tv.global.mi.com
+.in.yimg.com
 .incentive.skimresources.com
 .includemodal.global.ssl.fastly.net
 .incoming-data-sense360.s3.amazonaws.com
@@ -5381,6 +5442,7 @@
 .innovid.com.akadns.net
 .insight.ucweb.com
 .insights.algolia.io
+.insights.cloud.microsoft
 .insights.de.algolia.io
 .insights.us.algolia.io
 .insitez.blob.core.windows.net
@@ -5492,6 +5554,7 @@
 .jun01.oss-cn-beijing.aliyuncs.com
 .jy9xwwr6na98-a.akamaihd.net
 .jzapi.baidu.com
+.jzclick.soso.com
 .jzt.jd.com
 .k-ulog.kwai-pro.com.akadns.net
 .k-ulog.kwaipros.com.akadns.net
@@ -5512,11 +5575,13 @@
 .kgipadstatbak.kugou.com
 .kgmobilestat.kugou.com
 .kgmobilestatbak.kugou.com
+.kiks.yandex.ru
 .kinesis.eu-west-1.amazonaws.com
 .kingdata.ksyun.com
 .kinstruments-measurements.s3-external-1.amazonaws.com
 .kjdsfjisdfjr23.azurewebsites.net
 .klclick1.com
+.klipmart.forbes.com
 .kmmgoogle.oss-ap-southeast-1.aliyuncs.com
 .knicks.jd.com
 .kp-ads.oss-ap-southeast-5.aliyuncs.com
@@ -6086,6 +6151,7 @@
 .mobileanalytics.us-east-1.amazonaws.com
 .mobileconfig.sascdn.com
 .mobilecrashreporting.googleapis.com
+.mobileleads.msn.com
 .mobilelog.kugou.com
 .mobilem.360.cn
 .mobilemsg.youku.com
@@ -6134,6 +6200,7 @@
 .mqs-log.miui.com
 .mqtt.zhihu.com
 .ms.bdimg.com
+.ms.yandex.ru
 .msadsscale.azureedge.net
 .msadsscale.microsoft.com
 .msc.baidu.com
@@ -6305,6 +6372,7 @@
 .ntvcld-a.akamaihd.net
 .nvm6zgsnhj.data.adobedc.net
 .nxet1.360doc.cn
+.nytadvertising.nytimes.com
 .o.lenovo.com
 .o.medallia.com
 .o.phb123.com
@@ -6328,6 +6396,7 @@
 .oceanengine.com
 .odc.weather.com
 .odp.optimizely.com
+.offer.alibaba.com
 .officedepot.com.data.adobedc.net
 .officehub.nel.measure.office.net
 .offnavi.map.baidu.com
@@ -6335,6 +6404,7 @@
 .ogads-pa.clients6.google.com
 .ogads-pa.googleapis.com
 .ohm-dot-hackster-io.appspot.com
+.oimsgad.qq.com
 .olimenew.baidu.com
 .omappapi.com
 .omes-sec.heytapmobi.com
@@ -6374,6 +6444,7 @@
 .openlocation-drcn.platform.dbankcloud.com
 .openmonitor.alipay-eco.com
 .openmonitor.alipay.com
+.openpanel.dev
 .openrcv.baidu.com
 .opentelemetry-collector-1730785506.us-east-1.elb.amazonaws.com
 .openweb.bid
@@ -6599,6 +6670,8 @@
 .ping4.sina.cn
 .pingback.giphy.com
 .pingback.sogou.com
+.pingfore.qq.com
+.pingfore.soso.com
 .pinghot.qq.com
 .pingjs.qq.com
 .pingma.qq.com
@@ -6672,6 +6745,7 @@
 .policy.jd.com
 .policy.video.iqiyi.com
 .poll.gras.samsungdm.com
+.polling.bbc.co.uk
 .polyfill.io
 .popcashjs.b-cdn.net
 .popme.163.com
@@ -6710,6 +6784,7 @@
 .presentationtracking.netflix.com
 .preview-kmkonline.akamaized.net
 .preview.msn.com
+.prexyone.appspot.com
 .primis.tech
 .privacy-center.org
 .privacy-policy.truste.com
@@ -6825,10 +6900,12 @@
 .qpb.sohu.com
 .qpb0.sohu.com
 .qpb1.sohu.com
+.qqlogo.qq.com
 .qqpublic.qpic.cn
 .qqshow2-item.qq.com
 .qr-non-member-unsubscribe-landing-page.qr.test.ajo.adobe.com
 .qreport.qunar.com
+.qring-tms.qq.com
 .qrl.existence.pp.ua
 .qsearch-a.akamaihd.net
 .qss-client.qq.com
@@ -6852,6 +6929,7 @@
 .r.sascdn.com
 .r.sg.sec.miui.com
 .r.skimresources.com
+.r.turn.com.akadns.net
 .r.twimg.com
 .r0.mail.ru
 .r1.visualwebsiteoptimizer.com
@@ -6863,6 +6941,7 @@
 .rad.microsoft.com
 .rad.msn.com
 .rads.msn.com
+.rads.stackoverflow.com
 .raine.accuweather.com
 .rapid-glade-cde8.asoumare042024.workers.dev
 .ras.yahoo.com
@@ -6872,6 +6951,7 @@
 .rawtelemetry-west.servicebus.windows.net
 .rbs.data.adobedc.net
 .rcgi.video.qq.com
+.rcm-images.amazon.com
 .rcm-jp.amazon.co.jp
 .rcm.amazon.com
 .rd.autohome.com.cn
@@ -6954,6 +7034,7 @@
 .rich.qq.com
 .richaudience.com
 .richmedia.video.qq.com
+.richmedia.yimg.com
 .rics.data.adobedc.net
 .risk-fp-openapi.vivo.com.cn
 .risk.clearbit.com
@@ -7173,6 +7254,7 @@
 .seccliprod.alipay.com
 .secure.diet.mayoclinic.org
 .secureflashplayerfeedback.adobe.com
+.secureir.ebaystatic.com
 .securemetrics-z.v.aaplimg.com
 .securemetrics.apple.com.cn
 .securemetrics.v.aaplimg.com
@@ -7214,12 +7296,15 @@
 .server-side-tagging-467905025565.us-central1.run.app
 .server-side-tagging-4emtbbe4fq-uc.a.run.app
 .server-side-tagging-4ptnomxg5q-uc.a.run.app
+.server-side-tagging-4ylyr7d3ca-uc.a.run.app
 .server-side-tagging-5bttyxmdra-uc.a.run.app
 .server-side-tagging-633178361708.us-central1.run.app
 .server-side-tagging-6fteqhqa3a-uc.a.run.app
 .server-side-tagging-714522204330.asia-southeast1.run.app
 .server-side-tagging-73cisqsxyq-uc.a.run.app
 .server-side-tagging-795003655167.us-east5.run.app
+.server-side-tagging-7agflidina-uc.a.run.app
+.server-side-tagging-7csmrshmxq-uc.a.run.app
 .server-side-tagging-7h5q7725ma-uc.a.run.app
 .server-side-tagging-7lw5t4h42q-uc.a.run.app
 .server-side-tagging-7xmmq75mcq-uc.a.run.app
@@ -7276,6 +7361,7 @@
 .server-side-tagging-nw5gv56yjq-uc.a.run.app
 .server-side-tagging-oh37ak3tfq-uc.a.run.app
 .server-side-tagging-okdnqmrjrq-uc.a.run.app
+.server-side-tagging-pd42r5yr4a-uc.a.run.app
 .server-side-tagging-prnl4gbxna-uc.a.run.app
 .server-side-tagging-pvmaaggmcq-uc.a.run.app
 .server-side-tagging-q6nk4xfvhq-uc.a.run.app
@@ -7349,6 +7435,7 @@
 .shoplienquanmienphi.com
 .shouji.360.cn
 .shouji.sogou.com
+.show-msgch.qq.com
 .show.look.360.cn
 .showwxml.qq.com
 .shuaji.360.cn
@@ -7469,6 +7556,7 @@
 .splitbee.io
 .spo.nel.measure.office.net
 .spocs.getpocket.com
+.spolecznosci.mgr.consensu.org
 .sponsor-logos.s3.amazonaws.com
 .spoor-api.ft.com
 .spotops.spot.im
@@ -7646,8 +7734,10 @@
 .sunlightmetrics.b-cdn.net
 .superrtl.data.adobedc.net
 .supersonicads-a.akamaihd.net
+.supersonicads.com
 .supportmetrics-uat.apple.com
 .supportmetrics.apple.com
+.survey.china.alibaba.com
 .surveygizmobeacon.s3.amazonaws.com
 .susapi.lenovomm.com
 .suvset.sohu.com
@@ -7852,6 +7942,7 @@
 .tiqcdn.com
 .titan-ws.pinduoduo.com
 .titan.pinduoduo.com
+.titkoshirek.wordpress.com
 .tj.b.qq.com
 .tj.kugou.com
 .tj.video.qq.com
@@ -7907,6 +7998,7 @@
 .tongji.baidu.com
 .toolbar.baidu.com
 .toolbar.msn.com
+.toolbar.soso.com
 .toolbar.yahoo.com
 .tools.3g.qq.com
 .toots-a.akamaihd.net
@@ -7914,6 +8006,7 @@
 .top-staging.mail.ru
 .top.h.qhimg.com
 .top.mail.ru
+.top5.mail.ru
 .toruk.tanx.com
 .touch-moblie.com
 .toutiao-frontier.snssdk.com
@@ -7961,6 +8054,7 @@
 .tracker-663174376.us-east-1.elb.amazonaws.com
 .tracker-dot-dfty-optimeeze-leroymerlines.appspot.com
 .tracker-dot-dfty-optimeeze-leroymerlinfr.appspot.com
+.tracker-dot-dfty-optimeeze-leroymerlinit.appspot.com
 .tracker-dot-dfty-optimeeze-leroymerlinpt.appspot.com
 .tracker-dot-optimeeze.appspot.com
 .tracker-load-balancer-910132794.us-east-1.elb.amazonaws.com
@@ -8035,6 +8129,7 @@
 .tsb.data.adobedc.net
 .tsearch.snssdk.com
 .tsyndicate.com
+.ttpsdk.info
 .tttppp.oss-cn-guangzhou.aliyuncs.com
 .tui.gtimg.com
 .tui.taobao.com
@@ -8077,6 +8172,7 @@
 .udd1i5.zhihu.com
 .udpolimenew.baidu.com
 .udpolimeok.baidu.com
+.uedata.amazon.com
 .ueisnifferengine2.azurewebsites.net
 .ufosdk.baidu.com
 .ug-sg.byteoversea.com
@@ -8148,9 +8244,11 @@
 .unionimage.baidu.com
 .unitacs.m.taobao.com
 .unitelogreport.reader.qq.com
+.unityads.unity.cn
 .unityads.unity3d.com
 .universalorlando.com.data.adobedc.net
 .unpm-upaas.uc.cn
+.unstat.baidu.com
 .up-hl.3g.qq.com
 .up1.tj.u2.ucweb.com
 .up4.ucweb.com
@@ -8255,6 +8353,7 @@
 .vd.emp.prd.s3.amazonaws.com
 .vebo-vast.pages.dev
 .vegslb.com
+.vendorlist.consensu.org
 .venezia-measurements.s3-external-1.amazonaws.com
 .vf.startpage.com
 .vg07-met-vgwort-de.cdn.ampproject.org
@@ -8291,6 +8390,8 @@
 .vmonitor.ws.netease.com
 .vmss-clarity-ingest-eus2-b.eastus2.cloudapp.azure.com
 .vodus-api-serverless.azurewebsites.net
+.vodus-api.azurewebsites.net
+.voduscdn.azureedge.net
 .voiceads.cn
 .volceapplog.com
 .volcsiriusbd.com
@@ -8455,6 +8556,7 @@
 .www-google-analytics.l.google.com
 .www-googletagmanager.l.google.com
 .www.addtoany.com
+.www.visualwebsiteoptimizer.com
 .www5.oss-cn-hangzhou.aliyuncs.com
 .www7.springer.com
 .wxaintpcos.wxqcloud.qq.com.cn
@@ -8507,6 +8609,7 @@
 .xz-development.oss-cn-beijing.aliyuncs.com
 .xz.fbcdn.net
 .xzliewk0jg.data.adobedc.net
+.y3.ifengimg.com
 .y66xvgo5i.chuimg.com
 .y6rqjbto8p.data.adobedc.net
 .yab-adimages.s3.amazonaws.com
@@ -8550,6 +8653,7 @@
 .yurjsnlknv.data.adobedc.net
 .ywx79wmimh.data.adobedc.net
 .yybx.oss-cn-hangzhou.aliyuncs.com
+.zasc-cota.vivoglobal.com
 .zeemapsmetrics.s3.amazonaws.com
 .zergnet.com
 .zeus-nevo.pages.dev
@@ -8790,7 +8894,6 @@ prod.nexusrules.live.com
 public.gdtimg.com
 qiye.xiaomi.com
 qqdata.ab.qq.com
-qring-tms.qq.com
 quickaplus-server-api-cn-zhangjiakou.aliyuncs.com
 qzs.gdtimg.com
 r.dmp.sina.cn
