--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-11-13 10:38:11
-# Total rules: 9117
+# Generated from relevant_rules_wildcard_aware.txt on 2025-11-13 15:48:32
+# Total rules: 9145
 
 .0a0d-d3l1vr.b-cdn.net
 .0gc6y58nkk.data.adobedc.net
@@ -719,6 +719,7 @@
 .ad.qun.qq.com
 .ad.reddit.com
 .ad.rus.xiaomi.com
+.ad.shunchangzhixing.com
 .ad.sina.com.cn
 .ad.sohu.com
 .ad.southcn.com
@@ -1540,6 +1541,7 @@
 .apse1-ssp-prod-adserv-alb-365694524.ap-southeast-1.elb.amazonaws.com
 .apsrgeo.amap.com
 .aqua-adserver.com
+.aqyad.com
 .arc-emea.msn.com
 .arc1.msn.com
 .arclight.vimeo.com
@@ -2508,6 +2510,7 @@
 .cpro.baidu.com
 .cpro.tieba.baidu.com
 .cpro.zhidao.baidu.com
+.cpro.zol.com.cn
 .cpro2.baidu.com
 .cpsubzzzbg.data.adobedc.net
 .cpu-admin.baidu.com
@@ -4890,6 +4893,7 @@
 .g1.dfcfw.com
 .g2insights-cdn.azureedge.net
 .g2insights-fd-a0gpgwa4fycxd9d4.z01.azurefd.net
+.g9hc4.cn
 .ga-beacon.appspot.com
 .ga-bq-py-1.appspot.com
 .ga-server-side-tagging-latam-k6sb2lwzta-ue.a.run.app
@@ -5415,6 +5419,7 @@
 .img-dsp.oss-cn-beijing.aliyuncs.com
 .img-x.jd.com
 .img.alibaba.com
+.img.en25.com
 .img.gou.wpscdn.cn
 .img.n.nasdaq.com
 .img.response.digicert.com
@@ -5428,9 +5433,11 @@
 .img2.126.net
 .img2.360buyimg.com
 .img3.126.net
+.img3.usefathom.com
 .imgaliyun.res.mgtv.com
 .imgstat.baidu.com
 .imp.pixiv.net
+.imp.zol.com.cn
 .impact.go.economist.com
 .impactradius-event.com
 .impression-tracker-service-5eimuebuhq-lz.a.run.app
@@ -5495,6 +5502,7 @@
 .info.wps.cn
 .info4.video.qq.com
 .info6.video.qq.com
+.infolinks.com
 .informer.yandex.ru
 .ingest.appcenter.ms
 .inmobi.com
@@ -5518,6 +5526,7 @@
 .inte.sogou.com
 .inte.sogoucdn.com
 .inte.sohu.com
+.intensedebate.com
 .intentiq.com
 .interactivity-collector.metric.brightcove.com
 .interbank.data.adobedc.net
@@ -5646,7 +5655,9 @@
 .kinesis.eu-west-1.amazonaws.com
 .kingdata.ksyun.com
 .kinstruments-measurements.s3-external-1.amazonaws.com
+.kjapp.zol.com.cn
 .kjdsfjisdfjr23.azurewebsites.net
+.klclick1.com
 .klipmart.forbes.com
 .kmmgoogle.oss-ap-southeast-1.aliyuncs.com
 .knicks.jd.com
@@ -5861,6 +5872,7 @@
 .log.wechatpay.cn
 .log.weixin.qq.com
 .log.wtlogin.qq.com
+.log.ys7.com
 .log.zijieapi.com
 .log0-misc-alinc2.amemv.com
 .log0-misc-hl.amemv.com
@@ -5900,6 +5912,7 @@
 .logbk.amemv.com
 .logdc.happyelements.cn
 .logger.csslcloud.net
+.logger.unsplash.com
 .loggw-ex.alipay.com
 .loggw-exsdk.alipay.com
 .loggw-extiny.alipay.com
@@ -6864,6 +6877,7 @@
 .posthog.com
 .postrelease.com
 .postreport.meituan.com
+.powerad.ai
 .powerpoint-telemetry.officeapps.live.com
 .powr-counter.herokuapp.com
 .ppc-excel-telemetry.officeapps.live.com
@@ -6978,7 +6992,9 @@
 .pv.hd.sohu.com
 .pv.sogou.com
 .pv.sohu.com
+.pvnwap.zol.com.cn
 .pvstat.html5.qq.com
+.pvtest.zol.com.cn
 .pvx.autohome.com.cn
 .px-intl.ucweb.com
 .px.ucweb.com
@@ -7263,6 +7279,7 @@
 .safebrowsing.urlsec.qq.com
 .sail-horizon.com
 .sail-personalize.com
+.salesiq.zoho.com
 .salesiq.zohopublic.com
 .sam.msn.com
 .same.eastmoney.com
@@ -7355,6 +7372,7 @@
 .sdxvkj0e6a.data.adobedc.net
 .se.360.cn
 .sea.napi.ucweb.com
+.seal.digicert.com
 .seal.globalsign.com
 .seal.godaddy.com
 .sealine.youku.com
@@ -7496,6 +7514,7 @@
 .server-side-tagging-ystcjxpzdq-uc.a.run.app
 .server-side-tagging-zkjryjmc2q-uc.a.run.app
 .server-side-tagging-zrac5cmcvq-uc.a.run.app
+.server.iad.liveperson.net
 .serveraddr.service.kugou.com
 .serverside-analytics.uscca.workers.dev
 .serverside-tracking.ew.r.appspot.com
@@ -7751,9 +7770,11 @@
 .stat.ykimg.com
 .stat.youku.com
 .stat.youpin.mi.com
+.stat.zol.com.cn
 .statchecker.yandex.ru
 .statestreet.com.data.adobedc.net
 .static-addtoany-com.cdn.ampproject.org
+.static-ads.akamaized.net
 .static-doubleclick-net.l.google.com
 .static-s.iqiyi.com
 .static.addtoany.com
@@ -7891,6 +7912,7 @@
 .t.dukemag.duke.edu
 .t.dukewin.duke.edu
 .t.e.x.com
+.t.eloqua.com
 .t.firstpromoter.com
 .t.giving.duke.edu
 .t.home.news.cn
@@ -8488,6 +8510,7 @@
 .vcs.zijieapi.com
 .vd.contents.prod.eu.s3.amazonaws.com
 .vd.emp.prd.s3.amazonaws.com
+.vebo-vast.pages.dev
 .vegslb.com
 .vendorlist.consensu.org
 .venezia-measurements.s3-external-1.amazonaws.com
@@ -8568,6 +8591,7 @@
 .w3-reporting.reddit.com
 .w4aa025brr.data.adobedc.net
 .w4o7aea80ss3-a.akamaihd.net
+.w8.com.cn
 .wa.gtimg.com
 .wa.scribd.com
 .walmartasda.data.adobedc.net
@@ -8635,6 +8659,7 @@
 .whoslooking.herokuapp.com
 .widget.weibo.com
 .widgets.coingecko.com
+.widgets.coinmarketcap.com
 .widgets.getpocket.com
 .widgixeu-beacon.s3.amazonaws.com
 .wildcard-ads-1269115353.eu-west-1.elb.amazonaws.com
@@ -8762,6 +8787,7 @@
 .yaolu.yuedu.163.com
 .ybp.yahoo.com
 .yc-ads.s3.amazonaws.com
+.ydjs.zol.com.cn
 .ye.dun.163yun.com
 .yellowblue.io
 .yieldmo-builds.s3.amazonaws.com
@@ -8874,6 +8900,7 @@ api.yuedu.iqiyi.com
 api2.e.kuaishou.com
 app.migc.xiaomi.com
 applogapi.autohome.com.cn
+apppv.zol.com.cn
 appupdates.189.cn
 audio-ak-spotify-com.akamaized.net
 awaken.amap.com
@@ -8995,7 +9022,6 @@ loan-supermarket.faas.ele.me
 log.mmstat.com
 log.star.ele.me
 log.stat.kugou.com
-log.ys7.com
 logview.uc.alimama.com
 lookup.api.bsb.baidu.com
 ls.l.qq.com
@@ -9039,6 +9065,8 @@ pre2-ad.alimama.com
 pre3-ad.alimama.com
 prod.nexusrules.live.com
 public.gdtimg.com
+pv.zol.com.cn
+pvnapp.zol.com.cn
 qiye.xiaomi.com
 qqdata.ab.qq.com
 quickaplus-server-api-cn-zhangjiakou.aliyuncs.com
