--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-12-07 22:16:56
-# Total rules: 8396
+# Generated from relevant_rules_wildcard_aware.txt on 2025-12-08 11:19:30
+# Total rules: 8397
 
 .0a0d-d3l1vr.b-cdn.net
 .0gc6y58nkk.data.adobedc.net
@@ -751,6 +751,7 @@
 .ads-rendering-prod.corp.google.com
 .ads-sdk-gateway.prd.mz.internal.unity3d.com
 .ads-server-lb-2025-347698553.ap-southeast-1.elb.amazonaws.com
+.ads-service-65663778556.us-central1.run.app
 .ads-setu-proxy-eu.amazon.com
 .ads-sg.tiktok.com
 .ads-thanhnien-vn.cdn.ampproject.org
