--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,4 +1,4 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-12-09 14:06:46
+# Generated from relevant_rules_wildcard_aware.txt on 2025-12-10 10:15:26
 # Total rules: 8232
 
 .0a0d-d3l1vr.b-cdn.net
@@ -4148,6 +4148,7 @@
 .etahub.com
 .etg.qq.com
 .eth.pp.ua
+.ethicalads.io
 .etihadairways.data.adobedc.net
 .eu-album-api.vivoglobal.com
 .eu-cota.vivoglobal.com
@@ -5549,7 +5550,6 @@
 .miaowu.baidu.com
 .miaozhen.com
 .microchip.data.adobedc.net
-.midapps.net.global.prod.fastly.net
 .middycdn-a.akamaihd.net
 .miehuo-img-1258238960.cos.ap-hongkong.myqcloud.com
 .migc.g.mi.com
