--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,4 +1,4 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-12-10 10:15:26
+# Generated from relevant_rules_wildcard_aware.txt on 2025-12-10 14:20:01
 # Total rules: 8232
 
 .0a0d-d3l1vr.b-cdn.net
@@ -1769,7 +1769,6 @@
 .cmgstrategycollc.data.adobedc.net
 .cmop.mgtv.com
 .cmp.osano.com
-.cmp.springer.com
 .cmp.springernature.com
 .cms.opendsp.tanx.com
 .cms.tanx.com
@@ -5506,6 +5505,7 @@
 .mercury.akamaized.net
 .mercury.jd.com
 .mermaid.ximalaya.com
+.merrynode.gitee.io
 .messaging-notifications.api.nytimes.com
 .metadata-static-files.sfo2.cdn.digitaloceanspaces.com
 .meter-svc.nytimes.com
@@ -6168,6 +6168,7 @@
 .pnrt-stsdk.vivo.com.cn
 .pnrt-stsdk.vivoglobal.com
 .podcast.e.adobe.com
+.podname.com
 .polaris.zijieapi.com
 .polaris3-normal-hl.zijieapi.com
 .polaris3-normal-lf.zijieapi.com
@@ -6533,6 +6534,7 @@
 .rum-metrics.bunny.net
 .rum.ap-northeast-1.amazonaws.com
 .rum.condenastdigital.com
+.rum.corewebvitals.io
 .rum.eu-central-1.amazonaws.com
 .rum.eu-west-1.amazonaws.com
 .rum.eu-west-2.amazonaws.com
@@ -6798,7 +6800,6 @@
 .sgtm.fastcompany.com
 .sgtm.jetbrains.com
 .sgtm.siemens-home.bsh-group.com
-.sgtm.springer.com
 .sgtm.springernature.com
 .sgw-analytics.panasonic.com
 .sh.apigw.tencentcs.com
@@ -6936,6 +6937,7 @@
 .sponsor-logos.s3.amazonaws.com
 .spoor-api.ft.com
 .sprig.com
+.springer.com
 .spro.so.com
 .sprocket-ping.s3.amazonaws.com
 .spynet2.microsoft.com
@@ -7790,7 +7792,6 @@
 .wixlabs-adsense-v3.uc.r.appspot.com
 .wkclick.baidu.com
 .wkctj.baidu.com
-.wklwyt.springer.com
 .wknd.ai
 .wl.hd.sohu.com
 .wlog.gifshow.com
@@ -7830,7 +7831,6 @@
 .www.addtoany.com
 .www.visualwebsiteoptimizer.com
 .www5.oss-cn-hangzhou.aliyuncs.com
-.www7.springer.com
 .wxaintpcos.wxqcloud.qq.com.cn
 .wxs.qq.com
 .wxsnsad.tc.qq.com
