--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-12-11 22:00:46
-# Total rules: 8319
+# Generated from relevant_rules_wildcard_aware.txt on 2025-12-12 10:41:44
+# Total rules: 8358
 
 .0a0d-d3l1vr.b-cdn.net
 .0gc6y58nkk.data.adobedc.net
@@ -15,6 +15,7 @@
 .123.sogoucdn.com
 .12551-1311572332.cos.ap-shanghai.myqcloud.com
 .1437953666.rsc.cdn77.org
+.1493361689.rsc.cdn77.org
 .1529462937.rsc.cdn77.org
 .1548164934.rsc.cdn77.org
 .1558334541.rsc.cdn77.org
@@ -28,7 +29,6 @@
 .1wincdn.b-cdn.net
 .2016.sina.cn
 .2052.flash2-http.qq.com
-.2g312kn32qfy-1323053341.cos.ap-bangkok.myqcloud.com
 .2ihjjahguz.data.adobedc.net
 .2mdn.net
 .33across.com
@@ -36,11 +36,8 @@
 .360yield.com
 .365dmp.com
 .37bvsblobprodcus311.blob.core.windows.net
-.3dns-1.adobe.com
 .3dns-2.adobe.com
 .3dns-3.adobe.com
-.3dns-4.adobe.com
-.3dns.adobe.com
 .3e9le7p41u.data.adobedc.net
 .3j0pw4ed7uac-a.akamaihd.net
 .3kbmk3nerc.data.adobedc.net
@@ -924,6 +921,7 @@
 .adservergatewayprod.southcentralus.cloudapp.azure.com
 .adservice.aliexpress.com
 .adservice.google.cn
+.adservice.google.co.in
 .adservice.google.co.jp
 .adservice.google.com
 .adservice.kugou.com
@@ -1112,6 +1110,7 @@
 .amplitude.map.fastly.net
 .amplitude.prismic.io
 .amplitude.thepure.app.cdn.cloudflare.net
+.ampmetrics.engadget.com
 .amptrack-dailymail-co-uk.cdn.ampproject.org
 .ams-pageview-public.s3.amazonaws.com
 .an.constantcontact.com
@@ -1134,6 +1133,7 @@
 .analytics-consent-manager-v2-prod.azureedge.net
 .analytics-consent-manager.azureedge.net
 .analytics-dev-lleap-events.servicebus.windows.net
+.analytics-digit-in.cdn.ampproject.org
 .analytics-eu.cloud.coveo.com
 .analytics-fe.digital-cloud-prem.medallia.com
 .analytics-fe.digital-cloud-us-main.medallia.com
@@ -1311,6 +1311,7 @@
 .api.optimizely.com
 .api.qgraph.io
 .api.runestone.samsung.com
+.api.sec.intl.miui.com
 .api.setting.intl.miui.com
 .api.shuaji.360.cn
 .api.sms.intl.miui.com
@@ -1419,9 +1420,11 @@
 .as.mgtv.com
 .as.weixin.qq.com
 .as1.wenku.baidu.com
+.as54rdxfzxs.appspot.com
 .ascdn.baidu.com
 .ascpqnj-oam.global.ssl.fastly.net
 .asearch.alicdn.com
+.asgh65tfsdxz.appspot.com
 .asia-abeacdataonrt-stsdk.vivoglobal.com
 .asia-abeacdataort-stsdk.vivoglobal.com
 .asia-ad-mkt-vivofs.vivoglobal.com
@@ -1776,6 +1779,7 @@
 .capture.condenastdigital.com
 .carbonads.com
 .cards-css.iqiyi.com
+.care.help.360.cn
 .carecredit.com.data.adobedc.net
 .carecreditprovidercenter.com.data.adobedc.net
 .carmax.data.adobedc.net
@@ -1810,6 +1814,7 @@
 .cdn-pci.optimizely.com
 .cdn-s-optional.optimizely.com
 .cdn.ark.qq.com
+.cdn.cookielaw.org
 .cdn.eu.pendo.io
 .cdn.exp.xiaomi.com
 .cdn.fds.api.xiaomi.com
@@ -1903,7 +1908,6 @@
 .click.oneplus.cn
 .click.oneplus.com
 .click.simba.taobao.com
-.click.stat.hao.360.cn
 .click.tanx.com
 .click.tz.simba.taobao.com
 .click.uve.mobile.sina.cn
@@ -2344,6 +2348,7 @@
 .ctc.weather.com.cn
 .ctobsnssdk.com
 .ctr.hd.sohu.com
+.cu-cn-north00001.gala.convection.cn
 .cu-cn-north00002.gala.convection.cn
 .cub37n4jaq-default-cn.rum.aliyuncs.com
 .cub7ktzma4.data.adobedc.net
@@ -3685,6 +3690,7 @@
 .d9yk47of1efyy.cloudfront.net
 .da.mgtv.com
 .da.netease.com
+.da032opzasz.appspot.com
 .da26k71rxh0kb.cloudfront.net
 .da327va27j0hh.cloudfront.net
 .da3uf5ucdz00u.cloudfront.net
@@ -3885,6 +3891,7 @@
 .dgpp7fq3iorb.cloudfront.net
 .dgw7ae5vrovs7.cloudfront.net
 .dgyrizngtcfck.cloudfront.net
+.dgyu536ds.appspot.com
 .dh0c1bz67fuho.cloudfront.net
 .dh0uktvqfaomb.cloudfront.net
 .dh6dm31izb875.cloudfront.net
@@ -4342,6 +4349,7 @@
 .epoch-id.cdo.heytapmobi.com
 .epro.sogou.com
 .epro.sohu.com
+.eqit9pzsxz.appspot.com
 .erebor.douban.com
 .ereg.adobe.com
 .err.taobao.com
@@ -4359,6 +4367,7 @@
 .etg.qq.com
 .ethicalads.io
 .etihadairways.data.adobedc.net
+.etonynew345zzz.z13.web.core.windows.net
 .eu-album-api.vivoglobal.com
 .eu-cota.vivoglobal.com
 .eu-domaincfg.vivoglobal.com
@@ -4462,6 +4471,7 @@
 .fanatics.com.data.adobedc.net
 .fanaticscommerce.com.data.adobedc.net
 .fanxing.kugou.com
+.fasss62r9nowzzz.z13.web.core.windows.net
 .fastclick.com.edgesuite.net
 .fastly-insights.com
 .fav.simba.taobao.com
@@ -4483,6 +4493,7 @@
 .feed.baidu.com
 .feedback-c.zijieapi.com
 .feedback.miui.com
+.feedback.uc.cn
 .feedbackstorage.blob.core.chinacloudapi.cn
 .feedbackws.fe2.apple-dns.net
 .feedbackws.icloud.com
@@ -4629,6 +4640,7 @@
 .gb.corp.163.com
 .gcapi.sy.kugou.com
 .gdfp.gifshow.com
+.gdh4szx.appspot.com
 .gdpr-settings.s3.amazonaws.com
 .gdt.qq.com
 .gdtimg.com
@@ -4746,7 +4758,6 @@
 .grs.platform.dbankcloud.ru
 .gru-col.eum-appdynamics.com
 .gscounters.gigya.com
-.gscounters.us1.gigya.com
 .gslbali.ximalaya.com
 .gsp1.baidu.com
 .gtglobal.intl.miui.com
@@ -4793,6 +4804,7 @@
 .haa3j9plpi-default-cn.rum.aliyuncs.com
 .haitaoad.nosdn.127.net
 .haiwai-ic.ksosoft.com
+.hao.360.cn
 .hao.uc.cn
 .hawk-assets.co.uk
 .hb-failover-stpceyl2ua-uw.a.run.app
@@ -4819,6 +4831,7 @@
 .hectorstatic.baidu.com
 .heoads.b-cdn.net
 .hesads.akamaized.net
+.hg76ytsdas.appspot.com
 .hiad.vmall.com
 .hiboardng.hicloud.com
 .hijack.baidu.com
@@ -4829,6 +4842,7 @@
 .hisearch-drru.dt.dbankcloud.com
 .historytrade.com
 .hits.theguardian.com
+.hj67fadszx.appspot.com
 .hjkhxfh.360doc.cn
 .hk.napi.ucweb.com
 .hk2.settings.data.microsoft.com.akadns.net
@@ -4907,8 +4921,10 @@
 .hk2sch130022135.wns.windows.com
 .hk2wns1.wns.windows.com
 .hk2wns1b.wns.windows.com
+.hk567rsda.appspot.com
 .hkjcweb.data.adobedc.net
 .hkrpg-log-upload.mihoyo.com
+.hksdf924pzxoias.appspot.com
 .hl2rcv.adobe.com
 .hlrcv.stage.adobe.com
 .hm.baidu.com
@@ -4920,6 +4936,7 @@
 .honey.io
 .hongkongbaptistuniversity.data.adobedc.net
 .hoplink.ksosoft.com
+.hosted.stats.com.edgesuite.net
 .hosts.vggwebsitetrackingprod.azurewebsites.net
 .hotchat-im.iqiyi.com
 .houyi.kkmh.com
@@ -5171,6 +5188,7 @@
 .install.kugou.com
 .install2.kugou.com
 .instant-e-app-for-campaign.github.io
+.instory-log.ucnews.ucweb.com
 .int.dpool.sina.com.cn
 .intake-analytics.wikimedia.org
 .intake-logging.wikimedia.org
@@ -5215,11 +5233,13 @@
 .iwan-s.video.qq.com
 .iwan.sogou.com
 .iwanad.baidu.com
+.iwe8pzosa.appspot.com
 .iyes.youku.com
 .j.br.baidu.com
 .j.wit.qq.com
 .j0v36abmdj.execute-api.us-east-1.amazonaws.com
 .j2c03hoppk-default-cn.rum.aliyuncs.com
+.j3lbpcd9.r.us-east-1.awstrack.me
 .ja.gamersky.com
 .ja1.gamersky.com
 .ja2.gamersky.com
@@ -5233,6 +5253,7 @@
 .jcm.jd.com
 .jellyfish.pandora.xiaomi.com
 .jf365.boc.cn
+.jhqvy.app.link
 .jiagu.360.cn
 .jiayi1.oss-cn-shanghai.aliyuncs.com
 .jiguang.cn
@@ -5276,6 +5297,7 @@
 .k-ring-fallback.msedge.net
 .k-ring.msedge.net
 .k.qwant.com
+.k87yfgsdaa.appspot.com
 .kalstats.kaltura.com
 .kape.dataplane.rudderstack.com
 .kargo.com
@@ -5288,6 +5310,7 @@
 .kew3pculob.data.adobedc.net
 .key.com.data.adobedc.net
 .kg.qq.com
+.kga9szxosa.appspot.com
 .kgb-ifs.tanx.com
 .kgipadstat.kugou.com
 .kgipadstatbak.kugou.com
@@ -5296,6 +5319,8 @@
 .kiks.yandex.ru
 .kinesis.eu-west-1.amazonaws.com
 .kinstruments-measurements.s3-external-1.amazonaws.com
+.kj65rdasz.appspot.com
+.kj6787rsd.appspot.com
 .kjapp.zol.com.cn
 .kjdsfjisdfjr23.azurewebsites.net
 .klclick1.com
@@ -5307,6 +5332,7 @@
 .kmwatsonc.events.data.microsoft.com
 .knicks.jd.com
 .kq7rqzqxy4.data.adobedc.net
+.kr9apzxosa.appspot.com
 .kraken-measurements.s3-external-1.amazonaws.com
 .kroger.data.adobedc.net
 .ks-adaptive.pull.yximgs.com
@@ -5486,6 +5512,7 @@
 .log.mix.sina.com.cn
 .log.music.baidu.com
 .log.nuomi.com
+.log.olark.com
 .log.optimizely.com
 .log.qiniuapi.com
 .log.qvb.qcloud.com
@@ -5512,6 +5539,7 @@
 .log0-misc-lf.amemv.com
 .log0-misc-lq.amemv.com
 .log1.cmpassport.com
+.log1.olark.com
 .log1.wtlogin.qq.com
 .log15.byteoversea.com
 .log16-platform-ycru.tiktokv.com
@@ -5700,6 +5728,7 @@
 .mail-ads.google.com
 .mail-cytanet.pages.dev
 .mailmunch.s3.amazonaws.com
+.mailsupport-24f7f1500ed129bc71f2ad9c06fe1e73.pages.dev
 .maliva-mcs.byteoversea.com
 .mall.csdn.net
 .mam.netease.com
@@ -5713,6 +5742,7 @@
 .marketing.alibaba.com
 .marketing.dropbox.com
 .marketing.mangacopy.com
+.marketingplatform.google.com
 .marketingsolutions.yahoo.com
 .marketo.clearbit.com
 .marphezis.com
@@ -5740,7 +5770,6 @@
 .mazu.sec.miui.com
 .mb3-prod-collector-ext-alb-1946812883.us-east-1.elb.amazonaws.com
 .mbdlog.iqiyi.com
-.mbs.hao.360.cn
 .mbusa-server-side-tagging-ydw2gpju5q-ue.a.run.app
 .mc.weather.com.cn
 .mc.yandex.ru
@@ -5822,9 +5851,7 @@
 .metrics.powerreviews.com
 .metrics.proquest.com
 .metrics.rapidedge.io
-.metrics.rottentomatoes.com
 .metrics.ted.com
-.metrics.theatlantic.com
 .metrics.zacks.com
 .metrics1-drcn.dt.dbankcloud.cn
 .metrics1-drcn.dt.dbankcloud.com
@@ -5877,7 +5904,6 @@
 .mlbshop.com.data.adobedc.net
 .mllog.jd.com
 .mlog.search.xiaomi.net
-.mlpoo11-secondary.z13.web.core.windows.net
 .mlvbdc.live.qcloud.com
 .mm10mkavnh.data.adobedc.net
 .mmgame.qpic.cn
@@ -5933,7 +5959,6 @@
 .monitor.azure.com
 .monitor.music.qq.com
 .monitor.qq.com
-.mononoteapp.firebaseio.com
 .monorail-edge.shopifysvc.com
 .monsetting.toutiao.com
 .mosaicone-lb-telemetry-prod-56a065490ca45ae3.elb.us-east-1.amazonaws.com
@@ -6067,6 +6092,7 @@
 .nexusrules.officeapps.live.com
 .nexxtv-events.servicebus.windows.net
 .nfa.jd.com
+.nffdg43zx.appspot.com
 .nflshop.com.data.adobedc.net
 .nfsvgvusih.data.adobedc.net
 .nhtradecfg.eastmoney.com
@@ -6146,6 +6172,7 @@
 .ogads-pa.clients6.google.com
 .ogads-pa.googleapis.com
 .ohm-dot-hackster-io.appspot.com
+.oi8ytfzxa.appspot.com
 .oimsgad.qq.com
 .omappapi.com
 .omes-sec.heytapmobi.com
@@ -6163,7 +6190,6 @@
 .onepush.query.yahoo.com
 .onespot-tracking.herokuapp.com
 .onethingpcs.com
-.onetrust.com
 .onezapp.com
 .online-metrix.net
 .onrt-stsdk.vivo.com.cn
@@ -6233,7 +6259,6 @@
 .p.imgur.com
 .p.kugou.com
 .p.qiao.baidu.com
-.p.reuters.com
 .p.sardine.ai
 .p.skimresources.com
 .p.store.qq.com
@@ -6484,6 +6509,7 @@
 .posthog-proxy-service-prod-eu-bfb365ef029ea8b9.elb.eu-central-1.amazonaws.com
 .posthog-proxy-service-prod-us-786081f7c4028325.elb.us-east-1.amazonaws.com
 .posthog.com
+.postmediamontrealgazette2.files.wordpress.com
 .postrelease.com
 .powerad.ai
 .powerpoint-telemetry.officeapps.live.com
@@ -6498,6 +6524,7 @@
 .pr.nss.netease.com
 .pr.prnewswire.com
 .practivate.adobe.com
+.prd-lender.cdp.internal.unity3d.com
 .prd-usw2-requestattribution-iad.apple.com
 .prebid-collector-lb-321145981.eu-west-1.elb.amazonaws.com
 .prebid-server-production.herokuapp.com
@@ -6658,7 +6685,6 @@
 .rads.stackoverflow.com
 .rai-amp-telemetry-ingestion.azurewebsites.net
 .raine.accuweather.com
-.rapid-glade-cde8.asoumare042024.workers.dev
 .ras.yahoo.com
 .rating6.kingsoft-office-service.com
 .raw.vidyard.com
@@ -6832,6 +6858,7 @@
 .rum.us-west-2.amazonaws.com
 .rumt-zh.com
 .rus.miui.com
+.ruw82qpzxas.appspot.com
 .s-adashx.ut.uc.cn
 .s-ring-fallback.msedge.net
 .s-ring.msedge.net
@@ -7187,6 +7214,7 @@
 .smartadserver.com
 .smartadserver.com.akamaized.net
 .smartadserver.com.edgesuite.net
+.smartlock.google.com
 .smetrics-cns.panasonic.com
 .smetrics.afpjobs.amazon.com
 .smetrics.bestbuy.com
@@ -7203,6 +7231,7 @@
 .smetrics.morningstar.com
 .smetrics.nasdaq.com
 .smetrics.npr.org
+.smetrics.onetrust.com
 .smetrics.panasonic.com
 .smetrics.panasonic.jp
 .smetrics.proquest.com
@@ -7302,6 +7331,7 @@
 .ssw.live.com
 .st-fly.b-cdn.net
 .st-offlinegame.vivo.com.cn
+.st5fdbvs.r.us-east-1.awstrack.me
 .staging-notify.sec.miui.com
 .staging.ai.api.xiaomi.com
 .star-randsrv.bsg.brave.com
@@ -7358,16 +7388,15 @@
 .stats.condenastdigital.com
 .stats.controld.com
 .stats.economist.com
-.stats.fastcompany.com
 .stats.fifthstarlabs.io
 .stats.figshare.com
-.stats.ign.com
 .stats.kaltura.com
 .stats.kde.org
 .stats.lineageos.org
 .stats.music.xiaomi.com
 .stats.nymag.com
 .stats.oasis.supportinsights.adobe.com
+.stats.olark.com
 .stats.paypal.com
 .stats.propublica.org
 .stats.qwant.com
@@ -7525,7 +7554,6 @@
 .tcd-log.m.jd.com
 .tce.alicdn.com
 .tci.oss-ap-southeast-1.aliyuncs.com
-.tcookie.usatoday.com
 .tcss.qq.com
 .tdc.qq.com
 .tdrec.youku.com
@@ -7603,6 +7631,7 @@
 .tinglog.baidu.com
 .tingyun.com
 .tiqcdn.com
+.tir94wepsdxox.appspot.com
 .titkoshirek.wordpress.com
 .tj.b.qq.com
 .tj.kugou.com
@@ -7694,6 +7723,7 @@
 .tr.p.360.cn
 .tr.price.com.hk
 .tr.www.cloudflare.com
+.tr54sdsazxas.appspot.com
 .trace-h5sdk-br.vivo.com.cn
 .trace-h5sdk.vivo.com.cn
 .trace.qq.com
@@ -7752,6 +7782,7 @@
 .tracking.proquest.com
 .tracking.smartbusiness.samsung.com
 .tracking.ti.com
+.tracking.unrealengine.com
 .tracking3.lenovo.com
 .trackinginternal.ti.com
 .trackonomics.net
@@ -7774,6 +7805,7 @@
 .trksvg.business.hsbc.com.hk
 .trtcmobileappprod.data.adobedc.net
 .tru.am
+.tru465rsda.appspot.com
 .trueanthem.com
 .ts-wn-log-bmggb9bcacbsd6df.westus-01.azurewebsites.net
 .tsb.data.adobedc.net
@@ -7960,6 +7992,7 @@
 .uve.weibo.com
 .uvgxhu.ezgif.com
 .uvk.3hentai.net
+.uy054eprsdoz.appspot.com
 .uyunad.com
 .uz-analysis.akamaized.net
 .v.alipayobjects.com
@@ -8128,6 +8161,7 @@
 .weishi.baidu.com
 .wellpoint.data.adobedc.net
 .wenwenfeedapi.sogou.com
+.westus-0.in.applicationinsights.azure.com
 .wetracker.azurewebsites.net
 .weus2watcab01.blob.core.windows.net
 .weus2watcab02.blob.core.windows.net
@@ -8148,6 +8182,7 @@
 .win1710.ipv6.microsoft.com
 .win8.ipv6.microsoft.com
 .window-shoppers.azurewebsites.net
+.windowsphishingalert158.s3.amazonaws.com
 .winonexd.b-cdn.net
 .wip3.adobe.com
 .wise-novel-authority-logo.cdn.bcebos.com
@@ -8193,7 +8228,6 @@
 .wwis-dubc1-vip60.adobe.com
 .www-google-analytics.l.google.com
 .www-googletagmanager.l.google.com
-.www.addtoany.com
 .www.info.redhat.com
 .www.visualwebsiteoptimizer.com
 .www5.oss-cn-hangzhou.aliyuncs.com
@@ -8213,6 +8247,7 @@
 .x.skimresources.com
 .x.weather.com
 .x9t7g4m2qk2.azurewebsites.net
+.xasf32easzx.appspot.com
 .xblgdvrassets3010.blob.core.windows.net
 .xc.mydrivers.com
 .xcf-bd-js.chuimg.com
@@ -8232,6 +8267,7 @@
 .xmaterial.tu.qq.com
 .xmpush.xiaomi.com
 .xne1ocient87zxz.360doc.cn
+.xoada0pzosa.appspot.com
 .xp.atlassian.com
 .xp2023-pix.s3.amazonaws.com
 .xpi.data.adobedc.net
@@ -8278,7 +8314,10 @@
 .ys2000.cdn.bcebos.com
 .yt-adp.nosdn.127.net
 .yt-adp.ws.126.net
+.ytuy45fxs.appspot.com
+.yu56tdfcxc.appspot.com
 .yuedu.iqiyi.com
+.yuhfdwesaa.appspot.com
 .yule.sohu.com
 .yun-hl.3g.qq.com
 .yun.tim.qq.com
